force-app/main/default/objects/Quote/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF( Opportunity.Bill_To_Account__c != null , IF(Opportunity.Bill_To_Account__r.RecordType.Name = &apos;Person Account&apos;,Opportunity.Bill_To_Account__r.FirstName+IF(ISBLANK(Opportunity.Bill_To_Account__r.MiddleName),&apos;&apos;,&apos; &apos;+Opportunity.Bill_To_Account__r.MiddleName)+IF(ISBLANK(Opportunity.Bill_To_Account__r.LastName 
),&apos;&apos;,&apos; &apos;+Opportunity.Bill_To_Account__r.LastName 
),Opportunity.Bill_To_Account__r.Name) , IF(Opportunity.Account.RecordType.Name = &apos;Person Account&apos;,Opportunity.Account.FirstName+IF(ISBLANK(Opportunity.Account.MiddleName),&apos;&apos;,&apos; &apos;+Opportunity.Account.MiddleName)+IF(ISBLANK(Opportunity.Account.LastName 
),&apos;&apos;,&apos; &apos;+Opportunity.Account.LastName 
),Opportunity.Account.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>