force-app/main/default/objects/Quote/fields/Account_Name_New__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_New__c</fullName>
    <formula>Opportunity.Billing_To_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>