force-app/main/default/objects/Quote/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated -- do not use.  This functionality has been replaced by the Bill To Name and Address lookup.</description>
    <inlineHelpText>Deprecated -- do not use.  This functionality has been replaced by the Bill To Name and Address lookup.</inlineHelpText>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>