force-app/main/default/objects/Quote/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Opportunity.Billing_To_Addr_Line_1__c + BR() + 
Opportunity.Billing_To_Addr_Line_2__c + BR() + 
Opportunity.Billing_To_Addr_Line_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>