force-app/main/default/objects/Quote/fields/Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee__c</fullName>
    <label>Cancellation Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>