force-app/main/default/objects/Quote/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <formula>IF(
   ISBLANK(ContactId),
   &quot;&quot;,
   Contact.Email
  )</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>