force-app/main/default/objects/Quote/fields/Governing_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Governing_Jurisdiction__c</fullName>
    <label>Governing Jurisdiction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>