force-app/main/default/objects/Quote/fields/Opportunity_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_RecordType__c</fullName>
    <formula>Opportunity.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity RecordType</label>
    <type>Text</type>
</CustomField>