force-app/main/default/objects/Quote/fields/Original_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_PO_Date__c</fullName>
    <label>Original PO Date</label>
    <type>Date</type>
</CustomField>