force-app/main/default/objects/Quote/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Payment Due Immediately</fullName>
            </value>
            <value>
                <fullName>Payment Due Prior to Training</fullName>
            </value>
            <value>
                <fullName>Payment in full prior to training</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 65</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>