force-app/main/default/objects/Quote/fields/Sponsor_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Billing_Address__c</fullName>
    <description>This field is being used in Conga templates. Do not delete it.</description>
    <formula>IF(
   ISPICKVAL(Opportunity.Sponsor_Name__c, &quot;List the name of the Bill To Name and Address as the sponsor.&quot;),

   Opportunity.Bill_To_Address__r.Street__c + &quot;, &quot; + 
   Opportunity.Bill_To_Address__r.City__c + &quot;, &quot; + 
   Opportunity.Bill_To_Address__r.State__c + &quot; &quot; + 
   Opportunity.Bill_To_Address__r.Zip_Postal_Code__c +
   IF(
      ISBLANK(Opportunity.Bill_To_Address__r.Country__c),
      &quot;&quot;,
      &quot;, &quot; + Opportunity.Bill_To_Address__r.Country__c
     ),

   Opportunity.Account.BillingStreet + &quot;, &quot; + 
   Opportunity.Account.BillingCity + &quot;, &quot; + 
   Opportunity.Account.BillingState + &quot; &quot; + 
   Opportunity.Account.BillingPostalCode +
   IF(
      ISBLANK(Opportunity.Account.BillingCountry),
      &quot;&quot;,
      &quot;, &quot; + Opportunity.Account.BillingCountry
     )

  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Billing Address</label>
    <type>Text</type>
</CustomField>