force-app/main/default/objects/Quote/fields/Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Name__c</fullName>
    <description>This field is being used in Conga templates. Do not delete it.</description>
    <formula>IF(
   ISPICKVAL(Opportunity.Sponsor_Name__c, &quot;List the name of the Bill To Name and Address as the sponsor.&quot;),
   Opportunity.Bill_To_Address__r.Name,
   Opportunity.Account.Name
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Name</label>
    <type>Text</type>
</CustomField>