force-app/main/default/objects/Quote/fields/Sugar_Quote_GUID__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Quote_GUID__c</fullName>
    <label>Sugar Quote GUID</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>