force-app/main/default/objects/Quote/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount__c</fullName>
    <formula>Subtotal - TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>