force-app/main/default/objects/Quote/fields/Total_Discount_in_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_in_Amount__c</fullName>
    <label>Total Discount in Amount</label>
    <summarizedField>QuoteLineItem.Discount_in_amount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>