force-app/main/default/objects/Quote/fields/TotalInitialPriceOf_QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>TotalInitialPriceOf_QuoteLineItem__c</fullName>
    <label>Total InitialPrice Of QuoteLineItem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>