force-app/main/default/objects/Quote/fields/Types_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>Types_Of_Event__c</fullName>
    <formula>IF(LineItemCount = 1 ,&apos;(level) sponsorship&apos;,IF(AND(UniqueEvent__c = true , LineItemCount&gt;1),&apos;sponsorship&apos;,&apos;Multi Event Package sponsorship&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Types_Of_Event</label>
    <type>Text</type>
</CustomField>