force-app/main/default/objects/Quote/fields/UniqueEvent__c.field-meta.xml
<CustomField>
    <fullName>UniqueEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UniqueEvent</label>
    <type>Checkbox</type>
</CustomField>