force-app/main/default/objects/Quote/fields/UniqueEventNames__c.field-meta.xml
<CustomField>
    <fullName>UniqueEventNames__c</fullName>
    <label>UniqueEventNames</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>