force-app/main/default/objects/Quote/listViews/Event_Quotes.listView-meta.xml
<ListView>
    <fullName>Event_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_RecordType__c</field>
        <operation>equals</operation>
        <value>Event</value>
    </filters>
    <label>Event Quotes</label>
</ListView>